<resources>
    <string name="app_name">Borsa</string>
    <string name="go">go</string>
    <string name="company_name">company name</string>
    <string name="stock">stock</string>
    <string name="buy">buy</string>
    <string name="search_hint">search</string>
    <string name="sell">sell</string>
    <string name="log_in">log_in</string>
    <string name="menuimage">menuimage</string>
    <string name="menutxt">menutxt</string>
    <string name="login">Login</string>
    <string name="pass">password</string>
    <string name="email_or_user_name">Email or user name</string>
    <string name="logo">logo</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="create_new_account">Create New Account</string>
    <string name="application_color">Application color :</string>
    <string name="application_language">application language :</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="small">Small</string>
    <string name="big">Big</string>
    <string name="text_size">Text size :</string>
    <string name="notification">Notification :</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="start_up_screen">Start up screen :</string>
    <string name="company">Companies</string>
    <string name="brokers">Brokers</string>
    <string name="news">News</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">log out</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
