<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/com_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/stok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/com_name"
        android:text="@string/stock"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stok">


        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy" />

        <Button
            android:id="@+id/sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sell" />
    </LinearLayout>

</RelativeLayout>
