<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/login"
        android:title="@string/log_in"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/log"/>
    <item
        android:id="@+id/companies"
        android:title="@string/company"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/company"/>
    <item
        android:id="@+id/brokers"
        android:title="@string/brokers"
        android:orderInCategory="100"
        android:icon="@drawable/broker"
        app:showAsAction="never" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/news"
        android:title="@string/news"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="search"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/information"
        android:title="information"
        android:orderInCategory="100"
        android:icon="@drawable/about"
        app:showAsAction="never" />

</menu>