<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gradproject.borsa.Settings">


    <RelativeLayout
        android:id="@+id/rel_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_color"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/btBlack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="#181818"
            android:layout_toRightOf="@+id/color"
            android:layout_toEndOf="@+id/color"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            />

        <Button
            android:id="@+id/btWhite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="#f1f1f1"
            android:layout_toRightOf="@+id/btBlack"
            android:layout_toEndOf="@+id/btBlack"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/color"
            android:layout_marginTop="5dp"
            android:background="#884b4949"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_Lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_language"
            android:textSize="25sp" />
        <RadioGroup
            android:id="@+id/radioLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/language">
            <RadioButton
                android:id="@+id/radioAR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                />
            <RadioButton
                android:id="@+id/radioEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                />

        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/radioLang"
            android:layout_marginTop="3dp"
            android:background="#884b4949"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size"
            android:textSize="25sp" />
        <RadioGroup
            android:id="@+id/radioSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/size">
            <RadioButton
                android:id="@+id/radioSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                />
            <RadioButton
                android:id="@+id/radioBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big"
                />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/radioSize"
            android:layout_marginTop="3dp"
            android:background="#884b4949"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_notifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="25sp" />
        <RadioGroup
            android:id="@+id/radioNotifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification">
            <RadioButton
                android:id="@+id/radiOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                />
            <RadioButton
                android:id="@+id/radioOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/radioNotifi"
            android:layout_marginTop="3dp"
            android:background="#884b4949"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_startup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_up_screen"
            android:textSize="25sp" />
        <RadioGroup
            android:id="@+id/radiostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Start">
            <RadioButton
                android:id="@+id/radioCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                />
            <RadioButton
                android:id="@+id/radioBrokers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brokers"
                />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/radiostart"
            android:layout_marginTop="3dp"
            android:background="#884b4949"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="25sp"/>
    </RelativeLayout>



</LinearLayout>
