<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.gradproject.borsa.LogIn">
    <LinearLayout
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:weightSum="1"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_below="@id/img"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email_or_user_name"
             android:layout_weight="1"
        />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"

            android:layout_weight="1"
            />
      <!--  <TextView
            android:id="@+id/newuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            />-->

    </LinearLayout>

</RelativeLayout>
